Fix downloads#archive jump position.

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -1089,7 +1089,7 @@ body.file-demos-html .learn {
   }
 }
 
-#archive {
+#archive-section {
   h6 {
     display: inline;
   }
